[package]
name = "rewards-oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
lazy-distributor = { path = "../lazy-distributor", features = ["cpi"] }
helium-entity-manager = { path = "../helium-entity-manager", features = ["cpi"] }

