[package]
name = "rewards-oracle"
version = "0.2.8"
# Trigger deployment - timestamp: 03-31-2025 #3
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards_oracle"

[features]
idl-build = ["anchor-lang/idl-build", "lazy-distributor/idl-build"]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
lazy-distributor = { workspace = true, features = ["cpi"] }
helium-entity-manager = { workspace = true }
solana-security-txt = { workspace = true }
default-env = { workspace = true }
