cargo-features = ["workspace-inheritance"]

[package]
name = "treasury-management"
version = "0.0.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury_management"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
circuit-breaker = { path = "../circuit-breaker", features = ["cpi"] }
anchor-spl = { workspace = true }
shared-utils = { path = "../../utils/shared-utils" }
solana-security-txt = { workspace = true }
default-env = { workspace = true }
