[package]
name = "treasury-management"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury_management"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
ahash = { workspace = true }
anchor-lang = { workspace = true }
circuit-breaker = { workspace = true }
anchor-spl = { workspace = true }
shared-utils = { workspace = true }
solana-security-txt = { workspace = true }
default-env = { workspace = true }
