[package]
name = "treasury-management"
version = "0.2.1"
# Trigger deployment - timestamp: 03-31-2025 #3
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury_management"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
circuit-breaker = { workspace = true }
anchor-spl = { workspace = true }
shared-utils = { workspace = true }
solana-security-txt = { workspace = true }
default-env = { workspace = true }
